# AdventOfCode

./: Cargo.toml  README.md
.cargo/: config.toml
2024/1/: Cargo.toml
2024/10/src/: main.rs_part1thatwasactuallypart2
2024/11/: Cargo.toml  stone_table.txt
2024/11/src/: main.rs  stone_table.rs
2024/12/: Cargo.toml
2024/12/src/: main.rs
2024/13/: Cargo.toml
2024/13/src/: main.rs  main_floats.rs  main_nalgebra.rs
2024/14/: Cargo.toml
2024/14/src/: main.rs
2024/15/: Cargo.toml  log.txt
2024/15/src/: main.rs
2024/16/: Cargo.toml
2024/16/src/: main.rs
2024/17/: Cargo.toml  log.txt  program.txt
2024/17/src/: main.rs
2024/18/: Cargo.toml
2024/18/src/: main.rs
2024/19/: Cargo.toml
2024/19/src/: main.rs
2024/2/: Cargo.toml
2024/20/: Cargo.toml
2024/20/src/: main.rs
2024/21/: Cargo.toml
2024/21/src/: main.rs
2024/22/: Cargo.toml
2024/22/src/: main.rs
2024/23/: Cargo.toml
2024/23/src/: main.rs
2024/3/: Cargo.toml
2024/4/: Cargo.toml
2024/5/: Cargo.toml
2024/5/src/: main.rs
2024/6/: Cargo.toml
2024/7/: Cargo.toml
2024/8/: Cargo.toml
2024/9/: Cargo.toml  bruced.py  foo.cs
2024/9/src/: main.rs
advent/: Cargo.toml
advent/src/: advent_api.rs  main.rs
common/: Cargo.toml
common/src/: cli.rs  grid.rs  iterators.rs  lib.rs  search.rs
