[package]
name = "advent"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
inquire = "0.7.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
scraper = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
